# opengl_game

./: .gitignore  CMakeLists.txt  README.md  build.sh
.ccls-cache/@@home@cole@opengl_game/: @usr@include@GL@gl.h.blob  @usr@include@GL@glew.h.blob  @usr@include@GL@glu.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@types.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  (+190 more)
.ccls-cache/@home@cole@opengl_game/: src@renderer@Camera.h  src@renderer@Camera.h.blob  src@renderer@EBO.h  src@renderer@EBO.h.blob  src@renderer@Mesh.cpp  src@renderer@Mesh.cpp.blob  src@renderer@Mesh.h  src@renderer@Mesh.h.blob  src@renderer@Shader.h  src@renderer@Shader.h.blob  src@renderer@Texture.h  src@renderer@Texture.h.blob  src@renderer@VAO.h  src@renderer@VAO.h.blob  src@renderer@VBO.h.blob
assets/models/ramlethal_weapon/: license.txt  scene.gltf
assets/shaders/: default.frag  default.vert
include/: EBO.h  VBO.h  camera.h  meshClass.h  modelClass.h  shaderClass.h  textureClass.h
src/: camera.cpp  main.cpp  meshClass.cpp  modelClass.cpp  shaderClass.cpp  textureClass.cpp
src/core/: Window.cpp  Window.h
src/game/: Components.h  Entity.cpp  Entity.h  Game.cpp  Game.h  InterpolationSystem.cpp  InterpolationSystem.h  Scene.cpp  Scene.h
src/input/: Input.cpp  Input.h  InputSystem.cpp  InputSystem.h
src/network/: Client.cpp  Client.h  MessageTypes.h  Server.cpp  Server.h
src/physics/: BoxColliderSystem.cpp  BoxColliderSystem.h  CollisionUtil.h  RigidbodySystem.cpp  RigidbodySystem.h
src/renderer/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  VBO.h
